2000-05-26  Willem Jan Palenstijn  <palenstijn@wanadoo.nl>

	* Configuration.cc: added a temp. BeOS config file section
	* Configuration.cc: is_file set to true, even if file not found

2000-05-25  Jeff Freedman  <jeff@amy.nerble.net>

	* Orb of Moons, Moongates working (but not perfect visually)
	* Moongates appear animated.

2000-05-25  Willem Jan Palenstijn  <palenstijn@wanadoo.nl>
	* objs.cc: treat bones as containers
	* usecode.cc: make remove_answer accept arrays too
	* usecode.cc: added a _lot_ of intrinsic descriptions from ucdump.c
	* usecode.dis.bz2: a new usecode dump with all known intrinsics

2000-05-25  Coder Infidel  <coder_infidel@hotmail.com>

	* Display a better string when identifying objects that have a
	  quantity
	* objs.h, actors.h: Made many member functions const
	* gamewin.h: Made a few arguments const
	* actors.cc: Fixed slight inventory problem, removed unused variable
	* objs.cc, gumps.cc: Add support for Fellowship box container gump

2000-05-24  Jeff Freedman  <jeff@patches.simutech.com>

	* Finally got the 'sit' schedule to work.
	* Fixed pathfinding problem with getting stuck behind open doors.

2000-05-24  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* usecode.cc: implemented intrinsic 0x09 (clear_answers)

2000-05-24  Tristan Tarrant  <tarrant_tristan@emc.com>

	* usecode.cc: call endgame
	* exult.cc: press F10 to see the endgame sequence

2000-05-23  Jeff Freedman  <jeff@patches.simutech.com>

	* Support for lighting (torches, lamps, etc)

2000-05-23  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* Makefile.win32: added
	* Makefile.am: added Makefile.win32 to dist_targets

2000-05-22  Tristan Tarrant  <tarrant_tristan@emc.com>

	* */Makefile.am, configure.in, etc...: Rehauled build mechanism,
	no need to regenerate dependencies by hand, gcc dynamically does
	that, Makefile.am files are now much nicer and easier to maintain
	and this is the proper GNU way. Maybe I've broken Win32 builds...