@@ -1,5 +1,10 @@
-2000-05-26  Willem Jan Palenstijn  <palenstijn@wanadoo.nl>
+2000-05-28  Willem Jan Palenstijn  <palenstijn@wanadoo.nl>
+	* Makefile.be: modified to windows makefile to serve as Be makefile
+	* gamedat.cc: only include dir.h on windows
+	* Midi.cc: only try forked,KMIDI,timidity in XWin
+	* Configuration.cc: put .exult.cfg in user's homedir
 
+2000-05-26  Willem Jan Palenstijn  <palenstijn@wanadoo.nl>
 	* Configuration.cc: added a temp. BeOS config file section
 	* Configuration.cc: is_file set to true, even if file not found
 
